fixing gaps in nav

--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -90,7 +90,7 @@ header {
 
   h1 {
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.75rem;
   }
 
   a:hover {
@@ -115,8 +115,8 @@ nav#nav-main ul{
 
 	li{
 		display: inline-block;
-		margin-left: 0.5em;
-		margin-right: 0.5em;
+		margin-left: 0.4em;
+		margin-right: 0.4em;
 		list-style-type:none;
 		a{
 			font-family: $nav-font;
@@ -208,7 +208,6 @@ nav#nav-main ul{
 	
 	nav#nav-main ul li a{
 			font-size:1rem;
-			padding: 0.4em 0.5em;
 		}
 }
 
